DigicielFull/force-app/main/default/objects/Contract/fields/TECH_ContractEndingSoon__c.field-meta.xml
<CustomField>
    <fullName>TECH_ContractEndingSoon__c</fullName>
    <formula>EndDate  - 90 &lt;= TODAY()
&amp;&amp;
TODAY() &lt;= EndDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Ending Soon</label>
    <type>Checkbox</type>
</CustomField>