DigicielFull/force-app/main/default/objects/Contract/recordTypes/Business_Solutions.recordType-meta.xml
<RecordType>
    <fullName>Business_Solutions</fullName>
    <active>true</active>
    <description>Created to record all types of Business Solutions contracts</description>
    <label>Business Solutions</label>
</RecordType>