DigicielFull/force-app/main/default/objects/Contract/recordTypes/Digicel_Jamaica_GSM.recordType-meta.xml
<RecordType>
    <fullName>Digicel_Jamaica_GSM</fullName>
    <active>true</active>
    <label>Digicel Jamaica GSM</label>
</RecordType>