DigicielFull/force-app/main/default/objects/Contract/recordTypes/Digicel_PNG_GSM.recordType-meta.xml
<RecordType>
    <fullName>Digicel_PNG_GSM</fullName>
    <active>true</active>
    <label>Digicel PNG GSM</label>
</RecordType>