DigicielFull/force-app/main/default/objects/Contract/recordTypes/Digicel_PNG_ICT_GSM_Contract_Approved.recordType-meta.xml
<RecordType>
    <fullName>Digicel_PNG_ICT_GSM_Contract_Approved</fullName>
    <active>true</active>
    <label>Digicel PNG ICT &amp; GSM Contract Approved</label>
</RecordType>