DigicielFull/force-app/main/default/objects/Contract/recordTypes/Digicel_Trinidad_Tobago.recordType-meta.xml
<RecordType>
    <fullName>Digicel_Trinidad_Tobago</fullName>
    <active>true</active>
    <label>Digicel Trinidad &amp; Tobago</label>
</RecordType>