DigicielFull/force-app/main/default/objects/Contract/recordTypes/Digicel_Trinidad_Tobago_GSM.recordType-meta.xml
<RecordType>
    <fullName>Digicel_Trinidad_Tobago_GSM</fullName>
    <active>true</active>
    <label>Digicel Trinidad &amp; Tobago GSM</label>
</RecordType>