DigicielFull/force-app/main/default/objects/Contract/recordTypes/PNG_Digicel_ICT_GSM.recordType-meta.xml
<RecordType>
    <fullName>PNG_Digicel_ICT_GSM</fullName>
    <active>true</active>
    <label>Digicel PNG ICT &amp; GSM</label>
</RecordType>