DigicielFull/force-app/main/default/objects/Contract/recordTypes/Trend_Media_Contract.recordType-meta.xml
<RecordType>
    <fullName>Trend_Media_Contract</fullName>
    <active>true</active>
    <label>Trend Media Contract</label>
</RecordType>