DigicielFull/force-app/main/default/objects/Contract/validationRules/PNG_PreventStatusChangeIfNotSignedByCust.validationRule-meta.xml
<ValidationRule>
    <fullName>PNG_PreventStatusChangeIfNotSignedByCust</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISCHANGED(Status), LEFT(RecordType.Id,15) = LEFT($Label.PNG_ContractRecordTypeId,15),
OR(ISPICKVAL( PRIORVALUE (Status ),&apos;PNG_Draft&apos;),
ISPICKVAL( PRIORVALUE (Status ),&apos;PNG_Pre_Send_Approval_Pending&apos;),
ISPICKVAL( PRIORVALUE (Status ),&apos;Rejected&apos;),
ISPICKVAL( PRIORVALUE (Status ),&apos;PNG_Revision&apos;),
ISPICKVAL( PRIORVALUE (Status ),&apos;PNG_Customer_Signed_Approval_Pending&apos;)), 
OR( ISPICKVAL(Status,&apos;PNG_Contract mutually signed&apos;), ISPICKVAL(Status,&apos;PNG_Pre_Send_Approved&apos;))
)</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>Cannot proceed without approval or internal signing</errorMessage>
</ValidationRule>