DigicielFull/force-app/main/default/objects/Contract/listViews/Contracts_expiring_w_6_months.listView-meta.xml
<ListView>
    <fullName>Contracts_expiring_w_6_months</fullName>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CONTRACT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TECH_ContractEndingSoon__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Contracts expiring w/ 6 months</label>
</ListView>